@@ -130,7 +130,7 @@ public class ViewPoint implements Serializable {
      *
      */
     public void refreshStartAndEndPos() {
-        List<Segment> segments = this.restrictionSegmentList.stream().filter(Segment::isSelected).collect(Collectors.toList());
+        List<Segment> segments = this.restrictionSegmentList.stream().filter(Segment::isSelected).toList();
         // if the user deselects all segments, then none of the segments is empty. In this case, we just
         // leave the start and end position as they were
         if (segments.isEmpty()) return;
